UPDATED - index and style (MAY 15 lab)

--- a/index.html
+++ b/index.html
@@ -8,31 +8,69 @@
 </head>
 <body>
     <header>
-        <h1>Home</h1>
+        <h1>Stephen Marcus F. Decena</h1>
+        <h3>FEU Institute of Technology</h3>
         <nav>
-            <button>
-                <p>Hero</p>
-            </button>
-            <button>
+ 
+            <a href="#education">
                 <p>Education</p>
-            </button>
-            <button>
+            </a>
+            <a href="#hobbies">
                 <p>Hobbies & Skill</p>
-            </button>
+            </a>
         </nav>
     </header>
 
     <section class="hero">
         <div class="left">
-            <h3>Welcome to my world</h3>
-            <h1>Hi, I'm <span> Jone Lee </span></h1>
-            <h2>a Developer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, doloremque? Quae possimus accusantium iusto debitis fugit iste expedita autem laudantium, nam dolore commodi recusandae ad!</p>
+            <h3>Hello!</h3>
+            <h1>I'm <span> Stephen Decena</span></h1>
+            <h1>BS in Information Technology Student </h1>
+            <br>
+            <h2>-RESUME-</h2>
+            <p>  </p>
+            
         </div>
         <div class="right">
-            <img src="./assets/img/tyler.png" alt="TYLUH"
+            <img src="./assets/img/pic.jpeg" alt="TYLUH"
             width="700">
         </div>
     </section>
+
+    <section id="education">
+    
+        <h1> EDUCATION </h1>
+        <h2>SCHOOL: FAITH Catholic School - Tanauan City, Batangas </h2>
+
+        <h3> - Finished Preschool  </h3>
+        <h3> - Finished Grade school </h3>
+        <h3> - Finished High school </h3>
+        <br>
+        <h2>SCHOOL: FEU Institute of Technology - Sampaloc, Manila </h2>
+        <h3> - Currently taking BS in Information Technology (1st year)</h3>
+ 
+
+
+
+    </section>
+
+    <section id="hobbies">
+        <h1> HOBBIES & SKILLS </h1>
+        <h2>HOBBIES: </h2>
+        <h3> - Listening to music </h3>
+        <h3> - Watching sports & shows </h3>
+        <h3> - Play basketball </h3>
+        <h3> - Learning drums </h3>
+        <br>
+        <h2>SKILLS: </h2>
+        <h3> - Basic C++ knowledge </h3>
+        <h3> - Basic Photoshop knowledge </h3>
+        <h3> - Pro Canva User </h3>
+        <h3> -  </h3>
+
+
+
+    </section>
+
 </body>
 </html>
