--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div>
                 <nav class="links">
                     <li> <a href="#home" class="active">Home</a> </li>
-                    <li> <a href="/pages/aboutmePage/index.html">About Me</a> </li>
-                    <li> <a href="/pages/educationPage/index.html">Education</a> </li>
-                    <li> <a href="/pages/hobbiesPage/index.html">Hobbies & Skills</a> </li>               
+                    <li> <a href="./pages/aboutmePage/index.html">About Me</a> </li>
+                    <li> <a href="./pages/educationPage/index.html">Education</a> </li>
+                    <li> <a href="./pages/hobbiesPage/index.html">Hobbies & Skills</a> </li>               
                 </nav>
             </div>
         </nav>
