fix(navigation links): incorrect directory

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <title>Seatwork 2</title>
+    <title>Final Project</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Midterms Resumé</h1>
+        <h1>Final Project</h1>
         <nav id="header-nav">
             <div>
                 <nav class="links">
@@ -21,6 +21,7 @@
                     <li> <a href="./pages/aboutmePage/index.html">About Me</a> </li>
                     <li> <a href="./pages/educationPage/index.html">Education</a> </li>
                     <li> <a href="./pages/hobbiesPage/index.html">Hobbies & Skills</a> </li>               
+                    <li> <a href="./pages/hobbiesPage/index.html">Projects</a> </li>               
                 </nav>
             </div>
         </nav>
