--- a/pages/educationPage/index.html
+++ b/pages/educationPage/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <h1>Midterms Resumé</h1>
+        <h1>Final Project</h1>
         <nav id="header-nav">
             <div>
                 <nav class="links">
                     <li> <a href="/index.html" class="active">Home</a> </li>
-                    <li> <a href="/pages/aboutmePage/index.html">About Me</a> </li>
-                    <li> <a href="/pages/educationPage/index.html">Education</a> </li>
-                    <li> <a href="/pages/hobbiesPage/index.html">Hobbies & Skills</a> </li>               
+                    <li> <a href="../aboutmePage/index.html">About Me</a> </li>
+                    <li> <a href="../educationPage/index.html">Education</a> </li>
+                    <li> <a href="../hobbiesPage/index.html">Hobbies & Skills</a> </li>
+                    <li> <a href="../hobbiesPage/index.html">Projects</a> </li>               
+
                 </nav>
             </div>
         </nav>
