--- a/pages/hobbiesPage/index.html
+++ b/pages/hobbiesPage/index.html
@@ -13,7 +13,7 @@
         <nav id="header-nav">
             <div>
                 <nav class="links">
-                    <li> <a href="/index.html" class="active">Home</a> </li>
+                    <li> <a href="../../index.html" class="active">Home</a> </li>
                     <li> <a href="../aboutmePage/index.html">About Me</a> </li>
                     <li> <a href="../educationPage/index.html">Education</a> </li>
                     <li> <a href="../hobbiesPage/index.html">Hobbies & Skills</a> </li>
