--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <title>Final Project</title>
+    <title>Seatwork 2</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Final Project</h1>
+        <h1>Seatwork 2</h1>
         <nav id="header-nav">
             <div>
                 <nav class="links">
