--- a/pages/educationPage/index.html
+++ b/pages/educationPage/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Final Project</h1>
+        <h1>Seatwork 2</h1>
         <nav id="header-nav">
             <div>
                 <nav class="links">
