--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
-    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <title>Seatwork 2</title>
@@ -17,10 +17,11 @@
         <nav id="header-nav">
             <div>
                 <nav class="links">
+                    <li> <a href="https://sdecena.github.io/WD-Finals/" class="navigation">Go back to Project</a> </li>
                     <li> <a href="./index.html" class="active">Home</a> </li>
                     <li> <a href="./pages/aboutmePage/index.html">About Me</a> </li>
                     <li> <a href="./pages/educationPage/index.html">Education</a> </li>
-                    <li> <a href="./pages/hobbiesPage/index.html">Hobbies & Skills</a> </li>               
+                    <li> <a href="./pages/hobbiesPage/index.html">Hobbies & Skills</a> </li>
                 </nav>
             </div>
         </nav>
