--- a/pages/aboutmePage/index.html
+++ b/pages/aboutmePage/index.html
@@ -14,6 +14,7 @@
         <nav id="header-nav">
             <div>
                 <nav class="links">
+                    <li> <a href="https://sdecena.github.io/WD-Finals/" class="navigation">Go back to Project</a> </li>
                     <li> <a href="../../index.html" class="active">Home</a> </li>
                     <li> <a href="../aboutmePage/index.html">About Me</a> </li>
                     <li> <a href="../educationPage/index.html">Education</a> </li>
